Virtual Tryon API
