# routes/measurementRoutes.js
@@ -1,12 +1,12 @@
 const express = require('express')
 const router = express.Router()
-const {createMeasurements,getMeasurementsById,getAllPersons,virtualTryOn} = require("../controllers/measurementsController")
+const {createMeasurements,getMeasurementsById,getAllPersons,createTryOnTask, getTryOnStatus} = require("../controllers/measurementsController")
 const multer = require("multer")
 const storage = multer.memoryStorage();
 const upload = multer({ storage: storage });
 
 router.get("/user/getMeasurements/:personId",getMeasurementsById)
 router.get("/user/getMeasurements/",getAllPersons)
-router.post("/user/virtualTryon/",virtualTryOn)
+router.post("/user/virtualTryon/", upload.fields([{ name: 'humanImage', maxCount: 1 }, { name: 'clothImage', maxCount: 1 }]),createTryOnTask)
 router.post("/user/createMeasurements", upload.fields([{ name: 'front_image', maxCount: 1 }, { name: 'side_image', maxCount: 1 }]),createMeasurements)
-module.exports = router
+module.exports = router  
